--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer-infos">
-        <a href="#">Legal notice</a>
+        <a href="/legal-notice">Legal notice</a>
         <p>© David Eisenbarth 2026</p>
     </div>
     <img class="footer-logo" src="/assets/img/navbar/logo-default.png" alt="logo-default">
