--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-
-<router-outlet>
-  <app-header></app-header>
-  <app-navbar></app-navbar>
-  <app-footer></app-footer>
-</router-outlet>
+<app-header *ngIf="showHeader"></app-header>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
