complete legal-notice

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -8,6 +8,10 @@ footer {
     align-items: center;
 }
 
+a {
+    color: rgb(37, 45, 51);
+}
+
 .footer-logo {
     height: 100px;
     display: flex;
