--- a/src/app/features/legal-notice/legal-notice.component.scss
+++ b/src/app/features/legal-notice/legal-notice.component.scss
@@ -1,3 +1,13 @@
 .legal-notice-container {
     padding: 100px;
 }
+
+a {
+    color: rgb(137, 187, 217);
+
+    &:hover {
+        color: black;
+        background-color: rgb(137, 187, 217);
+        border-radius: 20px;
+    }
+}
