create privacy-policy and creat translate

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,42 +1,52 @@
 <header>
-    <div class="pass-img-container">
-        <div class="pass-background">
-            <img src="/assets/img/header/bubble_default.png" alt="pass-background-default">
-            <img src="/assets/img/header/bubble_hover.png" alt="pass-background-hover">
-        </div>
-        <div class="pass-img-box">
-            <img src="/assets/img/header/pass-img.png" alt="pass" class="pass-img">
-        </div>
+  <div class="pass-img-container">
+    <div class="pass-background">
+      <img src="/assets/img/header/bubble_default.png" alt="pass-background-default">
+      <img src="/assets/img/header/bubble_hover.png" alt="pass-background-hover">
     </div>
-    <div class="pass-text-box">
-        <div class="logo-container">
-            <div class="logo-box">
-                <img src="/assets/img/header/logo-default.svg" alt="logo-default">
-                <img src="/assets/img/header/logo-hover.svg" alt="logo-hover">
-            </div>
-            <div class="sozial-media-button">
-                <div class="email-box">
-                    <a href="mailto:davideisenbarth@gmail.com" style="cursor: pointer;">
-                        <img src="/assets/img/header/email-button.svg" alt="email-button">
-                        <img src="/assets/img/header/email-button-hover.svg" alt="email-button-hover"></a>
-                </div>
-                <div class="github-box">
-                    <a href="https://github.com/eisyeic" target="_blank" style="cursor: pointer;">
-                        <img src="/assets/img/header/github-button.svg" alt="github-button">
-                        <img src="/assets/img/header/github-button-hover.svg" alt="github-button-hover"></a>
-                </div>
-                <div class="linkedin-box">
-                    <a href="https://www.linkedin.com/in/david-eisenbarth-6113962a5/" target="_blank" style="cursor: pointer;">
-                        <img src="/assets/img/header/linkedin-button.svg" alt="linkedin-button">
-                        <img src="/assets/img/header/linkedin-button-hover.svg" alt="linkedin-button-hover"></a>
-                </div>
-            </div>
-        </div>
-        <h1 class="anta-regular">David Eisenbarth</h1>
-        <h3 class="">FRONTEND DEVELOPER</h3>
-        <div class="arrow-down">
-            <img src="/assets/img/header/arrow-down.svg" alt="arrow-down">
-            <img src="/assets/img/header/arrow-down-hover.svg" alt="arrow-down-hover">
-        </div>
+
+    <div class="pass-img-box">
+      <img src="/assets/img/header/pass-img.png" alt="pass" class="pass-img">
     </div>
+  </div>
+
+  <div class="pass-text-box">
+    <div class="logo-container">
+      <div class="logo-box">
+        <img src="/assets/img/header/logo-default.svg" alt="logo-default">
+        <img src="/assets/img/header/logo-hover.svg" alt="logo-hover">
+      </div>
+
+      <div class="sozial-media-button">
+        <div class="email-box">
+          <a href="mailto:davideisenbarth@gmail.com" style="cursor: pointer;">
+            <img src="/assets/img/header/email-button.svg" alt="email-button">
+            <img src="/assets/img/header/email-button-hover.svg" alt="email-button-hover">
+          </a>
+        </div>
+
+        <div class="github-box">
+          <a href="https://github.com/eisyeic" target="_blank" style="cursor: pointer;">
+            <img src="/assets/img/header/github-button.svg" alt="github-button">
+            <img src="/assets/img/header/github-button-hover.svg" alt="github-button-hover">
+          </a>
+        </div>
+
+        <div class="linkedin-box">
+          <a href="https://www.linkedin.com/in/david-eisenbarth-6113962a5/" target="_blank" style="cursor: pointer;">
+            <img src="/assets/img/header/linkedin-button.svg" alt="linkedin-button">
+            <img src="/assets/img/header/linkedin-button-hover.svg" alt="linkedin-button-hover">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <h1 class="anta-regular">{{ 'HEADER_NAME' | translate }}</h1>
+    <h3>{{ 'HEADER_ROLE' | translate }}</h3>
+
+    <div class="arrow-down">
+      <img src="/assets/img/header/arrow-down.svg" alt="arrow-down">
+      <img src="/assets/img/header/arrow-down-hover.svg" alt="arrow-down-hover">
+    </div>
+  </div>
 </header>
