--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,24 +1,33 @@
 <footer>
-    <div class="footer-infos">
-        <a href="/legal-notice">Legal notice</a>
-        <p>© David Eisenbarth 2026</p>
+  <div class="footer-infos">
+    <a href="/legal-notice">{{ 'FOOTER_LEGAL_NOTICE' | translate }}</a>
+    <p>{{ 'FOOTER_COPYRIGHT' | translate }}</p>
+  </div>
+
+  <a class="footer-logo" (click)="onLogoClick()" style="cursor: pointer;">
+    <img src="/assets/img/navbar/logo-default.png" alt="logo-default">
+  </a>
+
+  <div class="sozial-media-button">
+    <div class="email-box">
+      <a href="/privacy-policy" style="cursor: pointer;">
+        <img src="/assets/img/footer/email-footer-dark.svg" alt="email-button">
+        <img src="/assets/img/footer/email-footer-hover.svg" alt="email-button-hover">
+      </a>
     </div>
-    <img class="footer-logo" src="/assets/img/navbar/logo-default.png" alt="logo-default">
-    <div class="sozial-media-button">
-        <div class="email-box">
-            <a href="mailto:davideisenbarth@gmail.com" style="cursor: pointer;">
-                <img src="/assets/img/footer/email-footer-dark.svg" alt="email-button">
-                <img src="/assets/img/footer/email-footer-hover.svg" alt="email-button-hover"></a>
-        </div>
-        <div class="github-box">
-            <a href="https://github.com/eisyeic" target="_blank" style="cursor: pointer;">
-                <img src="/assets/img/footer/github-footer-dark.svg" alt="github-button">
-                <img src="/assets/img/footer/github-footer-hover.svg" alt="github-button-hover"></a>
-        </div>
-        <div class="linkedin-box">
-            <a href="https://www.linkedin.com/in/david-eisenbarth-6113962a5/" target="_blank" style="cursor: pointer;">
-                <img src="/assets/img/footer/linkedin-footer-dark.svg" alt="linkedin-button">
-                <img src="/assets/img/footer/linkedin-footer-hover.svg" alt="linkedin-button-hover"></a>
-        </div>
+
+    <div class="github-box">
+      <a href="https://github.com/eisyeic" target="_blank" style="cursor: pointer;">
+        <img src="/assets/img/footer/github-footer-dark.svg" alt="github-button">
+        <img src="/assets/img/footer/github-footer-hover.svg" alt="github-button-hover">
+      </a>
     </div>
+
+    <div class="linkedin-box">
+      <a href="https://www.linkedin.com/in/david-eisenbarth-6113962a5/" target="_blank" style="cursor: pointer;">
+        <img src="/assets/img/footer/linkedin-footer-dark.svg" alt="linkedin-button">
+        <img src="/assets/img/footer/linkedin-footer-hover.svg" alt="linkedin-button-hover">
+      </a>
+    </div>
+  </div>
 </footer>
