--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -21,6 +21,8 @@ a {
 
 .nav-logo {
     height: 70px;
+    display: flex;
+    justify-content: center;
 }
 
 .nav-links {
@@ -41,6 +43,7 @@ a {
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
 
     img {
         position: absolute;
