--- a/src/app/features/legal-notice/legal-notice.component.html
+++ b/src/app/features/legal-notice/legal-notice.component.html
@@ -1,72 +1,28 @@
 <div class="legal-notice-container">
-    <h2>Legal Notice</h2>
-    <h3>Imprint</h3>
-    <p>•David Eisenbarth</p>
-    <p>•Hauptstraße 1a</p>
-    <p>•37339 Berlingerode</p>
-    <h3>Exploring the Board</h3>
-    <a href="mailto:davideisenbarth&#64;gmail.com">davideisenbarth&#64;gmail.com</a>
-    <h3>Acceptance of terms</h3>
-    <p>By accessing and using
-        <a href="/index.html">Portfolio</a>
-        (Product), you acknowledge and agree to the following
-        terms and conditions, and
-        any policies, guidelines, or amendments thereto that may be presented to you from time to time. We, the listed
-        students, may update or change the terms and conditions from time to time without notice.
-    </p>
-    <h3>Scope and ownership of the product</h3>
-    <p>
-        <a href="/index.html">Portfolio</a>
-        has been developed as part of a student group project in a web development bootcamp at the
-        <a target="_blank" href="https://developerakademie.com/">Developer Akademie GmbH</a>
-        . It has an educational purpose and is not intended for extensive personal & business usage. As
-        such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality
-        regarding this Product.<br>The design of
-        <a href="/index.html">Portfolio</a>
-        is owned by the
-        <a target="_blank" href="https://developerakademie.com/">Developer Akademie GmbH</a>
-        . Unauthorized use, reproduction, modification,distribution, or replication of the design is strictly
-        prohibited.
-    </p>
-    <h3>Proprietary rights</h3>
-    <p>Aside from the design owned by <a target="_blank" href="https://developerakademie.com/">Developer Akademie
-            GmbH</a>
-        , we, the listed students, retain all proprietary rights in
-        <a href="/index.html">Portfolio</a>, including any associated copyrighted material, trademarks, and other
-        proprietary information.
-    </p>
-    <h3>Use of the product</h3>
-    <p><a href="/index.html">Portfolio</a> is intended to be used for lawful purposes only, in accordance with all
-        applicable laws and
-        regulations. Any use of <a href="/index.html">Portfolio</a> for illegal activities, or to harass, harm,
-        threaten, or intimidate another
-        person, is strictly prohibited. You are solely responsible for your interactions with other users of <a
-            href="/index.html">Portfolio</a>.
-    </p>
-    <h3>Disclaimer of warranties and limitation of liability</h3>
-    <p><a href="/index.html">Portfolio</a>
-        is provided "as is" without warranty of any kind, whether express or implied, including but not limited
-        to the implied warranties of merchantability, fitness for a particular purpose, and non-infringement.
-        In no event will we, the listed students, or the
-        <a target="_blank" href="https://developerakademie.com/">Developer Akademie</a>
-        , be liable for any direct, indirect, incidental,
-        special, consequential or exemplary damages, including but not limited to, damages for loss of profits,
-        goodwill, use, data, or other intangible losses, even if we have been advised of the possibility of such
-        damages, arising out of or in connection with the use or performance of
-        <a href="/index.html">Portfolio</a>.
-    </p>
-    <h3>Indemnity</h3>
-    <p>You agree to indemnify, defend and hold harmless us, the listed students, the
-        <a target="_blank" href="https://developerakademie.com/">Developer Akademie</a>
-        , and our affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand,
-        loss,
-        damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of
-        <a href="/index.html">Portfolio</a>
-        and/or your breach of this Legal Notice.
+  <h2>{{ 'LEGAL_TITLE' | translate }}</h2>
+  <h3>{{ 'LEGAL_IMPRINT' | translate }}</h3>
+  <p>{{ 'LEGAL_OWNER_NAME' | translate }}</p>
+  <p>{{ 'LEGAL_OWNER_ADDRESS1' | translate }}</p>
+  <p>{{ 'LEGAL_OWNER_ADDRESS2' | translate }}</p>
 
-        For any questions or notices, please contact us at
-        <a href="mailto:davideisenbarth&#64;gmail.com">davideisenbarth&#64;gmail.com</a>.
+  <h3>{{ 'LEGAL_EXPLORING_BOARD' | translate }}</h3>
+  <a href="mailto:davideisenbarth@gmail.com">{{ 'LEGAL_EMAIL' | translate }}</a>
 
-        Date: January 14, 2026
-    </p>
+  <h3>{{ 'LEGAL_ACCEPTANCE_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_ACCEPTANCE_TEXT' | translate }}</p>
+
+  <h3>{{ 'LEGAL_SCOPE_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_SCOPE_TEXT' | translate }}</p>
+
+  <h3>{{ 'LEGAL_PROPRIETARY_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_PROPRIETARY_TEXT' | translate }}</p>
+
+  <h3>{{ 'LEGAL_USE_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_USE_TEXT' | translate }}</p>
+
+  <h3>{{ 'LEGAL_DISCLAIMER_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_DISCLAIMER_TEXT' | translate }}</p>
+
+  <h3>{{ 'LEGAL_INDEMNITY_TITLE' | translate }}</h3>
+  <p>{{ 'LEGAL_INDEMNITY_TEXT' | translate }}</p>
 </div>
