Change the structure and create a why-me

--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -30,6 +30,12 @@ a {
     justify-content: space-between;
     align-items: center;
     gap: 100px;
+
+    a{
+        &:hover {
+            color: white;
+        }
+    }
 }
 
 .nav-language {
