--- a/src/app/features/privacy-policy/privacy-policy.component.html
+++ b/src/app/features/privacy-policy/privacy-policy.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="privacy-policy-container">
   <h2>{{ 'PRIVACY_TITLE' | translate }}</h2>
 
@@ -43,3 +45,4 @@
   <h3>{{ 'PRIVACY_SECTION7_TITLE' | translate }}</h3>
   <p>{{ 'PRIVACY_SECTION7_TEXT' | translate }}</p>
 </div>
+<app-footer></app-footer>
