--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,10 @@ h3 {
   font-weight: 400;
 }
 
+h4 {
+  font-size: 30px;
+}
+
 // Font Class
 .josefin-sans-thin {
   font-family: "Josefin Sans", sans-serif;
