--- a/src/app/features/legal-notice/legal-notice.component.html
+++ b/src/app/features/legal-notice/legal-notice.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="legal-notice-container">
   <h2>{{ 'LEGAL_TITLE' | translate }}</h2>
   <h3>{{ 'LEGAL_IMPRINT' | translate }}</h3>
@@ -26,3 +27,4 @@
   <h3>{{ 'LEGAL_INDEMNITY_TITLE' | translate }}</h3>
   <p>{{ 'LEGAL_INDEMNITY_TEXT' | translate }}</p>
 </div>
+<app-footer></app-footer>
