--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,13 @@ body {
   scroll-behavior: smooth;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+
 .d-none {
   display: none;
 }
