--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -2,8 +2,13 @@
 <app-navbar></app-navbar>
 
 <main>
+  
   <router-outlet></router-outlet>
   <app-why-me></app-why-me>
+  <app-my-skills></app-my-skills>
+  <app-my-projects></app-my-projects>
+  <app-contact-me></app-contact-me>
+
 </main>
 
 <app-footer></app-footer>
