--- a/src/app/shared/home/why-me/why-me.component.html
+++ b/src/app/shared/home/why-me/why-me.component.html
@@ -1,10 +1,30 @@
-<div class="why-me-container">
-    <h2>Why me</h2>
-    <div class="from">
-        <img src="/assets/img/why-me/place-icon.svg" alt="Place Icon">
-        <h4>
-            <span [ngStyle]="{ color: 'rgb(137, 187, 217)' }">I am</span>
-            located in Berlingerode
-        </h4>
+<div id="why-me" class="why-me-container">
+    <h2>{{ 'WHY_ME_TITLE' | translate }}</h2>
+
+    <div class="why-me-box">
+        <div class="from">
+            <img src="/assets/img/why-me/icon-remote.svg" alt="Remote Icon">
+            <h4>
+                <span [ngStyle]="{ color: 'rgb(137, 187, 217)' }">
+                    {{ 'WHY_ME_REMOTE_HIGHLIGHT' | translate }}
+                </span>
+                <span>
+                    {{ 'WHY_ME_REMOTE_TEXT_1' | translate }}
+                </span><br>
+                <span>
+                    {{ 'WHY_ME_REMOTE_TEXT_2' | translate }}
+                </span>
+            </h4>
+        </div>
+
+        <div class="why-me-text">
+            <p>{{ 'WHY_ME_DESCRIPTION' | translate }}</p>
+
+            <div class="why-me-button-box">
+                <a class="why-me-button" href="#">
+                    {{ 'WHY_ME_BUTTON' | translate }}
+                </a>
+            </div>
+        </div>
     </div>
 </div>
