finsch contact-me and create  projects

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -10,7 +10,7 @@
 
   <div class="sozial-media-button">
     <div class="email-box">
-      <a href="/privacy-policy" style="cursor: pointer;">
+      <a href="mailto:davideisenbarth@gmail.com" style="cursor: pointer;">
         <img src="/assets/img/footer/email-footer-dark.svg" alt="email-button">
         <img src="/assets/img/footer/email-footer-hover.svg" alt="email-button-hover">
       </a>
