create projects and create some links

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -44,9 +44,9 @@
     <h1 class="anta-regular">{{ 'HEADER_NAME' | translate }}</h1>
     <h3>{{ 'HEADER_ROLE' | translate }}</h3>
 
-    <div class="arrow-down">
+    <a href="#why-me" class="arrow-down">
       <img src="/assets/img/header/arrow-down.svg" alt="arrow-down">
       <img src="/assets/img/header/arrow-down-hover.svg" alt="arrow-down-hover">
-    </div>
+    </a>
   </div>
 </header>
