--- a/src/app/shared/home/contact-me/contact-me.component.html
+++ b/src/app/shared/home/contact-me/contact-me.component.html
@@ -1,4 +1,4 @@
-<div class="contact-me">
+<div id="contact-me" class="contact-me">
   <div class="contact-title">
     <h2>{{ 'CONTACT_TITLE' | translate }}</h2>
 
