--- a/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.html
+++ b/src/app/shared/home/my-projects/say-about-me/say-about-me/say-about-me.component.html
@@ -1,1 +1,49 @@
-<p>say-about-me works!</p>
+<div class="say-about-me">
+  <h4>{{ 'TESTIMONIALS_TITLE' | translate }}</h4>
+
+  <div class="bubble-container">
+
+    <div class="bubble-box">
+      <div class="bubble-text">
+        <h5>Sahra Mueller</h5>
+        <h6>
+          {{ 'TESTIMONIAL_PROJECT' | translate }}
+          <a href="#">Pokedex</a>
+        </h6>
+        <p>{{ 'TESTIMONIAL_1_TEXT' | translate }}</p>
+        <a class="linkedin" href="https://www.linkedin.com/">
+          {{ 'TESTIMONIAL_LINKEDIN' | translate }}
+        </a>
+      </div>
+    </div>
+
+    <div class="bubble-box">
+      <div class="bubble-text">
+        <h5>James Rugman</h5>
+        <h6>
+          {{ 'TESTIMONIAL_PROJECT' | translate }}
+          <a href="#">Join</a>
+        </h6>
+        <p>{{ 'TESTIMONIAL_2_TEXT' | translate }}</p>
+        <a class="linkedin" href="https://www.linkedin.com/">
+          {{ 'TESTIMONIAL_LINKEDIN' | translate }}
+        </a>
+      </div>
+    </div>
+
+    <div class="bubble-box">
+      <div class="bubble-text">
+        <h5>Evelyn Marx</h5>
+        <h6>
+          {{ 'TESTIMONIAL_PROJECT' | translate }}
+          <a href="#">El Pollo Loco</a>
+        </h6>
+        <p>{{ 'TESTIMONIAL_3_TEXT' | translate }}</p>
+        <a class="linkedin" href="https://www.linkedin.com/">
+          {{ 'TESTIMONIAL_LINKEDIN' | translate }}
+        </a>
+      </div>
+    </div>
+
+  </div>
+</div>
