--- a/src/app/shared/home/my-skills/my-skills.component.html
+++ b/src/app/shared/home/my-skills/my-skills.component.html
@@ -1,4 +1,4 @@
-<div class="my-skills">
+<div id="my-skills" class="my-skills">
   <h2>{{ 'SKILLS_TITLE' | translate }}</h2>
 
   <div class="my-skills-box">
