--- a/src/app/shared/home/why-me/why-me.component.html
+++ b/src/app/shared/home/why-me/why-me.component.html
@@ -21,7 +21,7 @@
             <p>{{ 'WHY_ME_DESCRIPTION' | translate }}</p>
 
             <div class="why-me-button-box">
-                <a class="why-me-button" href="#">
+                <a class="why-me-button" href="#contact-me">
                     {{ 'WHY_ME_BUTTON' | translate }}
                 </a>
             </div>
